[package]
name = "fabric-ui"
version = "0.0.1"
authors = ["Steve-xmh <stevexmh@qq.com>"]
edition = "2018"
description = "A light-weight gui framework using layered window in Rust."
readme = "README.md"
repository = "https://github.com/Steve-xmh/fabric-ui"
license = "BSD-3-Clause"
keywords = ["2d", "framework", "gui"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-skia = "0.4.2"
font-kit = "0.10.0"
pathfinder_geometry = "0.5.1"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "*", features = ["winuser", "windef", "wingdi", "uxtheme", "libloaderapi", "dwmapi", "imm"] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "*"
